--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Тест: Анализ и визуализация данных</title>
+<title>Тест: Базы данных</title>
 <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Unbounded:wght@400;700;900&display=swap" rel="stylesheet">
 <style>
   :root {
@@ -872,4 +872,5 @@ document.addEventListener('keydown', function(e) {
 </style>
 </body>
 </html>
+
 
