--- a/index.html
+++ b/index.html
@@ -639,44 +639,27 @@ function showResult() {
   else if (pct >= 50) { title = 'Удовлетворительно'; sub = `Вы ответили правильно на ${score} из ${questions.length} вопросов. Стоит повторить материал.`; }
   else { title = 'Нужно подготовиться'; sub = `Вы ответили правильно на ${score} из ${questions.length} вопросов. Рекомендуем изучить тему глубже.`; }
 
-  // Загружаем ответы из localStorage
-  const saved = sessionStorage.getItem('userAnswers');
-  if (saved) {
-    userAnswersDetails = JSON.parse(saved);
-  }
-
-  // Начинаем собирать HTML
+  // Собираем детали из answeredQuestions
   let detailsHTML = '';
+  const keys = Object.keys(answeredQuestions).map(Number).sort((a,b) => a-b);
   
-  // Проверяем, есть ли сохраненные ответы
-  if (userAnswersDetails.length === 0) {
-    detailsHTML = '<p style="color: var(--muted); text-align: center; padding: 20px;">Нет сохраненных ответов. Попробуйте ответить на вопросы сначала.</p>';
+  if (keys.length === 0) {
+    detailsHTML = '<p style="color: var(--muted); text-align: center; padding: 20px;">Нет сохраненных ответов.</p>';
   } else {
-    // Проходим по всем сохраненным ответам
-    for (let i = 0; i < userAnswersDetails.length; i++) {
-      const item = userAnswersDetails[i];
-      if (!item) continue;
-      
+    for (const i of keys) {
+      const item = answeredQuestions[i];
+      const q = questions[i];
+      if (!item || !q) continue;
       const statusColor = item.isCorrect ? 'var(--accent2)' : 'var(--wrong)';
       const statusIcon = item.isCorrect ? '✅' : '❌';
       const statusText = item.isCorrect ? 'Верно' : 'Неверно';
-      
       detailsHTML += `
         <div style="margin-bottom: 15px; padding: 15px; background: var(--card); border-radius: 8px; border-left: 4px solid ${statusColor};">
-          <div style="display: flex; justify-content: space-between; margin-bottom: 8px;">
-            <span style="font-weight: bold; color: ${statusColor};">Вопрос ${i + 1} ${statusIcon} ${statusText}</span>
-          </div>
-          <div style="margin-bottom: 8px; font-size: 0.95rem;">${item.question}</div>
-          <div style="margin-bottom: 5px; color: var(--muted);">
-            Ваш ответ: <span style="color: ${statusColor}; font-weight: bold;">${item.userAnswer}</span>
-          </div>
-          ${!item.isCorrect ? `
-            <div style="color: var(--accent2); margin-top: 5px;">
-              ✅ Правильный ответ: ${item.correctAnswer}
-            </div>
-          ` : ''}
-        </div>
-      `;
+          <div style="margin-bottom: 8px;"><span style="font-weight: bold; color: ${statusColor};">Вопрос ${i+1} ${statusIcon} ${statusText}</span></div>
+          <div style="margin-bottom: 8px; font-size: 0.9rem;">${q.q}</div>
+          <div style="color: var(--muted);">Ваш ответ: <span style="color: ${statusColor}; font-weight: bold;">${q.opts[item.chosen]}</span></div>
+          ${!item.isCorrect ? `<div style="color: var(--accent2); margin-top: 5px;">✅ Правильный: ${q.opts[item.correct]}</div>` : ''}
+        </div>`;
     }
   }
 
@@ -700,15 +683,13 @@ function showResult() {
 }
 
 function restartQuiz() {
-  sessionStorage.removeItem('userAnswers');
-  userAnswers = [];
-  userAnswersDetails = [];
-  sessionStorage.removeItem('quiz');
-  current = 0; score = 0;
+  sessionStorage.removeItem('quizProgress');
+  current = 0; score = 0; answered = false; answeredQuestions = {};
   document.getElementById('result-screen').className = 'result-screen';
   document.getElementById('quiz-area').style.display = 'block';
-  const btnNext = document.getElementById('btn-next');
-  btnNext.textContent = 'Следующий вопрос →';
+  document.getElementById('btn-next').textContent = 'Следующий вопрос →';
+  const navEl = document.getElementById('navInput');
+  if (navEl) navEl.value = 1;
   renderQuestion();
 }
 
@@ -725,12 +706,12 @@ document.addEventListener('DOMContentLoaded', function() {
   <button onclick="goToQuestion(current - 1)" style="background: var(--surface); border: 1px solid var(--border); color: var(--text); width: 36px; height: 36px; border-radius: 50%; cursor: pointer; font-weight: bold; font-size: 16px;" title="Предыдущий вопрос">◀</button>
   
   <div style="display: flex; align-items: center; gap: 5px; background: var(--surface); padding: 3px 10px; border-radius: 40px;">
-    <input type="number" id="navInput" min="1" max="90" value="1" style="width: 50px; background: transparent; border: none; color: var(--text); font-family: 'JetBrains Mono'; font-size: 14px; text-align: center; outline: none; border-bottom: 1px solid var(--accent);">
-    <span style="color: var(--muted); font-size: 14px;">/ 90</span>
+    <input type="number" id="navInput" min="1" max="93" value="1" style="width: 50px; background: transparent; border: none; color: var(--text); font-family: 'JetBrains Mono'; font-size: 14px; text-align: center; outline: none; border-bottom: 1px solid var(--accent);">
+    <span style="color: var(--muted); font-size: 14px;">/ 93</span>
   </div>
   
   <button onclick="goToQuestion(current + 1)" style="background: var(--surface); border: 1px solid var(--border); color: var(--text); width: 36px; height: 36px; border-radius: 50%; cursor: pointer; font-weight: bold; font-size: 16px;" title="Следующий вопрос">▶</button>
-  <button onclick="goToQuestion(89)" style="background: var(--accent2); border: none; color: white; width: 36px; height: 36px; border-radius: 50%; cursor: pointer; font-weight: bold; font-size: 16px;" title="Последний вопрос">⏭️</button>
+  <button onclick="goToQuestion(92)" style="background: var(--accent2); border: none; color: white; width: 36px; height: 36px; border-radius: 50%; cursor: pointer; font-weight: bold; font-size: 16px;" title="Последний вопрос">⏭️</button>
 </div>
 
 <!-- Модальное окно для подтверждения перехода -->
