--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ function renderQuestion() {
   isMulti = Array.isArray(q.multi);
 
   document.getElementById('q-number').textContent = `ВОПРОС ${String(current+1).padStart(2,'0')}`;
-  document.getElementById('q-text').innerHTML = q.q.replace(/\\n/g, '<br>');
+  document.getElementById('q-text').innerHTML = q.q.replace(/\n/g, '<br>');
   document.getElementById('progress-label').textContent = `Вопрос ${current+1} из ${questions.length}`;
   document.getElementById('score-label').textContent = `✓ ${score}`;
   document.getElementById('progress-fill').style.width = `${(current / questions.length) * 100}%`;
@@ -706,12 +706,12 @@ document.addEventListener('DOMContentLoaded', function() {
   <button onclick="goToQuestion(current - 1)" style="background: var(--surface); border: 1px solid var(--border); color: var(--text); width: 36px; height: 36px; border-radius: 50%; cursor: pointer; font-weight: bold; font-size: 16px;" title="Предыдущий вопрос">◀</button>
   
   <div style="display: flex; align-items: center; gap: 5px; background: var(--surface); padding: 3px 10px; border-radius: 40px;">
-    <input type="number" id="navInput" min="1" max="93" value="1" style="width: 50px; background: transparent; border: none; color: var(--text); font-family: 'JetBrains Mono'; font-size: 14px; text-align: center; outline: none; border-bottom: 1px solid var(--accent);">
-    <span style="color: var(--muted); font-size: 14px;">/ 93</span>
+    <input type="number" id="navInput" min="1" max="90" value="1" style="width: 50px; background: transparent; border: none; color: var(--text); font-family: 'JetBrains Mono'; font-size: 14px; text-align: center; outline: none; border-bottom: 1px solid var(--accent);">
+    <span style="color: var(--muted); font-size: 14px;">/ 90</span>
   </div>
   
   <button onclick="goToQuestion(current + 1)" style="background: var(--surface); border: 1px solid var(--border); color: var(--text); width: 36px; height: 36px; border-radius: 50%; cursor: pointer; font-weight: bold; font-size: 16px;" title="Следующий вопрос">▶</button>
-  <button onclick="goToQuestion(92)" style="background: var(--accent2); border: none; color: white; width: 36px; height: 36px; border-radius: 50%; cursor: pointer; font-weight: bold; font-size: 16px;" title="Последний вопрос">⏭️</button>
+  <button onclick="goToQuestion(89)" style="background: var(--accent2); border: none; color: white; width: 36px; height: 36px; border-radius: 50%; cursor: pointer; font-weight: bold; font-size: 16px;" title="Последний вопрос">⏭️</button>
 </div>
 
 <!-- Модальное окно для подтверждения перехода -->
